BB-22563: [Frontend] UI issues on tablet/mobile (#35704)

--- a/src/Oro/Bundle/FormBundle/Resources/public/default/scss/components/input.scss
+++ b/src/Oro/Bundle/FormBundle/Resources/public/default/scss/components/input.scss
@@ -67,8 +67,6 @@
     }
 
     &[type='number'] {
-        appearance: textfield;
-
         &::-webkit-outer-spin-button,
         &::-webkit-inner-spin-button {
             margin: 0;
